cambio en sockets a 1 segundo para el cliente, monitor ram en frontend terminado

--- a/Frontend/src/styles/components/_header.scss
+++ b/Frontend/src/styles/components/_header.scss
@@ -17,6 +17,11 @@
     font-weight: 500;
     margin: 0;
   }
+
+  .header__subtitle2 {
+    color: $off-white;
+    font-size: $l-size;
+  }
   
   @media (min-width: $desktop-breakpoint) {
     .header {
